Add seed script and update package.json for database seeding

--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint . --format json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:alpaca": "tsx scripts/testAlpaca.ts",
-    "test:positions": "tsx scripts/testPositions.ts"
+    "test:positions": "tsx scripts/testPositions.ts",
+    "seed": "tsx scripts/seed.ts"
   },
   "keywords": [],
   "author": "",
