--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,98 @@
-server/node_modules/
-server/.env
-server/package-lock.json
-client/node_modules/
-client/dist/
-client/package-lock.json
+# Dependencies
 node_modules/
-package-lock.json
-uploads
-fileDescriptions.json
+*/node_modules/
+client/node_modules/
+server/node_modules/
+shared/node_modules/
+
+# Build outputs
+dist/
+build/
+*/dist/
+*/build/
+client/dist/
+server/dist/
 shared/dist/
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+server/.env
+server/.env.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pm2-*.log
+pm2-out.log
+pm2-error.log
+pm2-combined.log
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Test coverage
+coverage/
+*.lcov
+.nyc_output/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+uploads/
+
+# Package manager files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+client/package-lock.json
+server/package-lock.json
+
+# TypeScript
+*.tsbuildinfo
+
+# Production deployment packages
+*.tar.gz
+*.zip
+
+# Database files (if running locally)
+*.sqlite
+*.sqlite3
+*.db
+dump/
+
+# PM2
+.pm2/
+
+# Certificate files
+*.pem
+*.key
+*.crt
+
+# Backup files
+*.backup
+*.bak
+
+# OS files
+Thumbs.db
+Desktop.ini
+
+# Cache
+.cache/
+.eslintcache
+.stylelintcache
+
+# Project specific
+fileDescriptions.json
+fileDescriptions.tmp
